# poco

./: .gitignore  CMakeLists.txt  CMakeSettings.json
.github/workflows/: ci.yml
CppUnit/: CppUnit_vs170.vcxproj  CppUnit_vs170.vcxproj.filters  PocoCppUnit.ixx
CppUnit/include/CppUnit/: Asserts.h  CppAsserts.h  CppTestMacros.h  CppUnit.h  CppUnitException.h  PocoCppUnit.ixx  RepeatedTest.h  Test.h  TestCaller.h  TestCase.h  TestDecorator.h  TestFailure.h  TestResult.h  TestRunner.h  TestSetup.h  TestSuite.h  TextTestResult.h  estring.h
CppUnit/src/: PocoCppUnit.ixx  TestCase.cpp  TestRunner.cpp  TextTestResult.cpp
Data/: CMakeLists.txt  Data_vs170.sln  Data_vs170.vcxproj  Data_vs170.vcxproj.filters
Data/SQLParser/modules/: CreateStatement.cppm  Expr.cppm  PrepareStatement.cppm  SQLParser.cppm  SQLParserResult.cppm  SQLStatement.cppm  statements.cppm
Data/SQLite/: CMakeLists.txt
Data/SQLite/modules/: Binder.cppm  Connector.cppm  Extractor.cppm  Notifier.cppm  PocoDataSQLite.cppm  SQLiteException.cppm  SQLiteStatementImpl.cppm  SessionImpl.cppm  Utility.cppm
Data/modules/: AbstractBinder.cppm  AbstractBinding.cppm  AbstractExtraction.cppm  AbstractExtractor.cppm  AbstractPreparation.cppm  AbstractPreparator.cppm  ArchiveStrategy.cppm  Bulk.cppm  Connector.cppm  DataException.cppm  Date.cppm  DynamicLOB.cppm  JSONRowFormatter.cppm  Limit.cppm  MetaColumn.cppm  PocoData.cppm  PooledSessionHolder.cppm  PooledSessionImpl.cppm  Position.cppm  Range.cppm  RecordSet.cppm  Row.cppm  RowFilter.cppm  RowFormatter.cppm  RowIterator.cppm  SQLChannel.cppm  Session.cppm  SessionFactory.cppm  SessionImpl.cppm  SessionPool.cppm  SessionPoolContainer.cppm  SimpleRowFormatter.cppm  Statement.cppm  StatementCreator.cppm  StatementImpl.cppm  Time.cppm  Transaction.cppm  Transcoder.cppm
Data/src/: PocoData.ixx
Data/testsuite/: TestSuite_vs170.vcxproj
Foundation/: CMakeLists.txt  Foundation_vs160.vcxproj  Foundation_vs170.sln  Foundation_vs170.vcxproj  Foundation_vs170.vcxproj.filters  PocoFoundation.ixx
Foundation/include/Poco/: ASCIIEncoding.h  AbstractCache.h  AbstractStrategy.h  AccessExpireStrategy.h  ActiveResult.h  ActiveThreadPool.h  Alignment.h  Any.h  ArchiveStrategy.h  Array.h  ArrayInline.h  AsyncChannel.h  AtomicCounter.h  AutoPtr.h  AutoReleasePool.h  Base32Decoder.h  Base32Encoder.h  Base64Decoder.h  Base64Encoder.h  BinaryReader.h  BinaryWriter.h  Buffer.h  BufferAllocator.h  BufferedBidirectionalStreamBuf.h  BufferedStreamBuf.h  Bugcheck.h  BugcheckAsserts.h  ByteOrder.h  ClassLibrary.h  ClassLoader.h  Condition.h  Config.h  ConsoleChannel.h  CountingStream.h  DataURIStream.h  DateTimeFormat.h  DefaultStrategy.h  DeflatingStream.h  Delegate.h  DelegateInlines.h  (+114 more)
Foundation/include/Poco/Dynamic/: Pair.h  Struct.h  Var.h  VarHolder.h  VarIterator.h  VarVisitor.h
Foundation/modules/: ASCIIEncoding.cppm  AbstractObserver.cppm  ActiveDispatcher.cppm  ActiveMethod.cppm  ActiveResult.cppm  ActiveThreadPool.cppm  ArchiveStrategy.cppm  Ascii.cppm  AsyncChannel.cppm  AsyncNotificationCenter.cppm  AtomicCounter.cppm  Base32Decoder.cppm  Base32Encoder.cppm  Base64Decoder.cppm  Base64Encoder.cppm  BinaryReader.cppm  BinaryWriter.cppm  Bugcheck.cppm  Channel.cppm  Checksum.cppm  Clock.cppm  Condition.cppm  Configurable.cppm  ConsoleChannel.cppm  CountingStream.cppm  DataURIStream.cppm  DateTime.cppm  DateTimeFormat.cppm  DateTimeFormatter.cppm  DateTimeParser.cppm  Debugger.cppm  DeflatingStream.cppm  DigestEngine.cppm  DigestStream.cppm  DirectoryIterator.cppm  DirectoryIteratorStrategy.cppm  DirectoryWatcher.cppm  DynamicArray.cppm  DynamicPair.cppm  DynamicStruct.cppm  (+129 more)
Foundation/src/: ActiveThreadPool.cpp  BinaryReader.cpp  Bugcheck.cpp  Clock.cpp  ConsoleChannel.cpp  DateTime.cpp  Debugger.cpp  DirectoryWatcher.cpp  Environment.cpp  Environment_WIN32U.cpp  Error.cpp  Exception.cpp  FPEnvironment_WIN32.cpp  FileChannel.cpp  Format.cpp  HashStatistic.cpp  JSONString.cpp  LocalDateTime.cpp  Logger.cpp  Message.cpp  Notification.cpp  NumberFormatter.cpp  NumberParser.cpp  NumericString.cpp  PIDFile.cpp  Path.cpp  PocoFoundation.ixx  Process.cpp  ProcessRunner.cpp  Random.cpp  RegularExpression.cpp  SHA2Engine.cpp  SortedDirectoryIterator.cpp  StringTokenizer.cpp  TemporaryFile.cpp  TextBufferIterator.cpp  TextEncoding.cpp  TextIterator.cpp  Thread.cpp  ThreadPool.cpp  (+19 more)
Foundation/testsuite/: TestLibrary_vs170.vcxproj  TestSuite_vs170.vcxproj
Foundation/testsuite/src/: ActiveDispatcherTest.cpp  ActiveDispatcherTest.h  ActiveMethodTest.cpp  ActiveMethodTest.h  ActiveThreadPoolTest.cpp  ActiveThreadPoolTest.h  ActivityTest.cpp  ActivityTest.h  AnyTest.cpp  AnyTest.h  ArrayTest.cpp  ArrayTest.h  AutoPtrTest.cpp  AutoPtrTest.h  AutoReleasePoolTest.cpp  AutoReleasePoolTest.h  Base32Test.cpp  Base32Test.h  Base64Test.cpp  Base64Test.h  BasicEventTest.cpp  BasicEventTest.h  BinaryReaderWriterTest.cpp  BinaryReaderWriterTest.h  ByteOrderTest.cpp  ByteOrderTest.h  CacheTestSuite.h  ChannelTest.cpp  ChannelTest.h  ClassLoaderTest.cpp  ClassLoaderTest.h  ClockTest.cpp  ClockTest.h  ConditionTest.cpp  ConditionTest.h  CoreTest.cpp  CoreTest.h  CoreTestSuite.cpp  CoreTestSuite.h  CountingStreamTest.cpp  (+223 more)
JSON/: CMakeLists.txt  JSON_vs170.vcxproj
JSON/include/Poco/JSON/: Parser.h  ParserImpl.h
JSON/modules/: Array.cppm  Handler.cppm  JSONException.cppm  JSONString.cppm  Object.cppm  ParseHandler.cppm  Parser.cppm  ParserImpl.cppm  PocoJSON.cppm  PrintHandler.cppm  Query.cppm  Stringifier.cppm  Template.cppm  TemplateCache.cppm
JSON/src/: Parser.cpp  ParserImpl.cpp
JSON/testsuite/: CMakeLists.txt
JSON/testsuite/src/: JSONTest.cpp  JSONTest.cppm  JSONTest.h  test.cppm
Net/: CMakeLists.txt
Net/src/: RemoteSyslogListener.cpp  SSPINTLMCredentials.cpp  WebSocket.cpp
Util/: CMakeLists.txt
Util/modules/: PocoUtil.cppm
Util/src/: ServerApplication.cpp
XML/: CMakeLists.txt  XML_vs170.vcxproj  XML_vs170.vcxproj.filters
XML/modules/: PocoXML.cppm
XML/src/: NamePool.cpp  PocoXML.ixx
XML/testsuite/: TestSuite_vs170.vcxproj
cmake/: PocoMacros.cmake
(+17 files in other folders)
